# simple_kinova

./: CMakeLists.txt  CMakeLists.txt.user.aff3ce3  CMakeLists.txt.user.c413a42  CMakeLists.txt.user.c93f0bb  CMakeLists.txt.user.e873ec6  README.md  move_group_all.sh
.kdev4/: src.kdev4
apc_objects/: CMakeLists.txt  package.xml
apc_objects/meshes/: NJKivaShelf.STL  cheezit_big_original.STL  crayola_64_ct.STL  expo_dry_erase_board_eraser.STL  expo_dry_erase_board_eraser_cord_origin.STL  munchkin_white_hot_duck_bath_toy.STL  munchkin_white_hot_duck_bath_toy_cord_origin.STL
apc_objects/scripts/: makeObjectsInGraspit.py
camera_calibration/: CMakeLists.txt~  extern_matrix.txt  package.xml~
camera_calibration/saved_image/: extern_matrix.txt  extern_matrix.txt~  result
camera_calibration/saved_image2/: extern_matrix.txt  extern_matrix.txt~  result  result~
camera_calibration/src/: camera_matrix.cpp  picture_saved.cpp
jaco_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  package.xml~
jaco_arm_moveit_config/config/: fake_controllers.yaml  jaco.srdf  joint_limits.yaml  ompl_planning.yaml~
jaco_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  jaco_moveit_controller_manager.launch.xml~  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  real.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
jaco_dynamic_ident/: CMakeLists.txt  CMakeLists.txt~  package.xml
jaco_dynamic_ident/joint_angle_file/: joint_angle.txt  joint_angle_1130.txt  joint_angle_1203.txt
jaco_dynamic_ident/object_pick_bag/: test_crayon_2015-12-24-14-41-47.bag  test_noobject_2015-12-10-14-52-14.bag  test_noobject_2015-12-10-14-53-17.bag  test_noobject_2015-12-10-14-54-16.bag  test_noobject_2015-12-10-14-55-20.bag  test_noobject_l_2015-12-10-15-35-41.bag  test_noobject_l_2015-12-10-15-37-00.bag  test_object_2015-12-10-14-45-59.bag  test_object_2015-12-10-14-47-25.bag  test_object_2015-12-10-14-48-52.bag  test_object_2015-12-10-14-50-08.bag  test_object_2015-12-10-14-50-08.orig.bag  test_stanley_2015-12-24-14-38-13.bag
jaco_dynamic_ident/scripts/: joint_states_wrapper.py~  (+5 more)
kinova_wpi_ros/wpi_jaco_msgs/: CMakeLists.txt  package.xml
kinova_wpi_ros/wpi_jaco_msgs/msg/: AngularTorqueCommand.msg  CartesianForceCommand.msg  JointPosiCartForce.msg  jointStateConvertedForce.msg
kinova_wpi_ros/wpi_jaco_msgs/srv/: GetAngularEffort.srv
simple_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
system_identification/: CMakeLists.txt  package.xml
turtle/: CMakeLists.txt  CMakeLists.txt~  package.xml
turtle/Xsens/xcommunication/: iointerfacefile.cpp  legacydatapacket.cpp  mtwsdidata.cpp  protocolhandler.cpp  serialinterface.cpp  usbinterface.cpp
turtle/Xsens/xstypes/: Makefile  datapacket_p.h  xsarray.c  xsdatapacket.cpp  xsdeviceid.c  xsfile.c  xsmath.c  xsmessage.c  xsoutputconfigurationarray.c  xsportinfoarray.c  xsresultvalue.c  xssimpleversion.c  xssocket.c  xsstring.c  xssyncsetting.c  xsthread.c  xsutctime.c  xsversion.c
turtle/include/linuxcan/: moduleinfo.txt
turtle/include/linuxcan/canlib/: VCanFunctions.d  canlib.d  libcanlib.so.1.1.0
turtle/include/linuxcan/canlib/examples/: busparms  cancount  canmonitor  listChannels  readTimerTest  simplewrite  writeloop
turtle/include/linuxcan/common/: .VCanOsIf.o.cmd  .kvcommon.ko.cmd  .kvcommon.mod.o.cmd  .kvcommon.o.cmd  .objbuf.o.cmd  .osif_functions_kernel.o.cmd  .queue.o.cmd  .softsync.o.cmd  .util.o.cmd  kvcommon.ko  kvcommon.mod.c  modules.order
turtle/include/linuxcan/common/.tmp_versions/: kvcommon.mod
turtle/include/linuxcan/leaf/: .leaf.ko.cmd  .leaf.mod.o.cmd  .leaf.o.cmd  .leafHWIf.o.cmd  leaf.ko  leaf.mod.c  modules.order
turtle/include/linuxcan/leaf/.tmp_versions/: leaf.mod
turtle/include/linuxcan/linlib/: liblinlib.so.1.1.0
turtle/include/linuxcan/mhydra/: .mhydra.ko.cmd  .mhydra.mod.o.cmd  .mhydra.o.cmd  .mhydraHWIf.o.cmd  mhydra.ko  mhydra.mod.c  modules.order
turtle/include/linuxcan/mhydra/.tmp_versions/: mhydra.mod
turtle/include/linuxcan/pcican/: .PciCanHwIf.o.cmd  .dallas.o.cmd  .kvpcican.ko.cmd  .kvpcican.mod.o.cmd  .kvpcican.o.cmd  Module.symvers  kvpcican.ko  kvpcican.mod.c  modules.order
turtle/include/linuxcan/pcican/.tmp_versions/: kvpcican.mod
turtle/include/linuxcan/pcican2/: .PciCan2HwIf.o.cmd  .kvpcicanII.ko.cmd  .kvpcicanII.mod.o.cmd  .kvpcicanII.o.cmd  .memQ.o.cmd  kvpcicanII.ko  kvpcicanII.mod.c  modules.order
turtle/include/linuxcan/pcican2/.tmp_versions/: kvpcicanII.mod
turtle/include/linuxcan/pciefd/: .kvpciefd.ko.cmd  .kvpciefd.mod.o.cmd  .kvpciefd.o.cmd  .pciefd_hwif.o.cmd  kvpciefd.ko  kvpciefd.mod.c  modules.order
turtle/include/linuxcan/pciefd/.tmp_versions/: kvpciefd.mod
turtle/include/linuxcan/pciefd/Altera/HAL/src/: .altera_avalon_epcs_flash_controller.o.cmd  .altera_avalon_spi.o.cmd  .epcs_commands.o.cmd  .pciefd.o.cmd  .pciefd_packet.o.cmd  .pciefd_rx_fifo.o.cmd  .pwm_util.o.cmd
turtle/include/linuxcan/usbcanII/: .usbcanHWIf.o.cmd  .usbcanII.ko.cmd  .usbcanII.mod.o.cmd  .usbcanII.o.cmd  Module.symvers  modules.order  usbcanII.ko  usbcanII.mod.c
turtle/include/linuxcan/usbcanII/.tmp_versions/: usbcanII.mod
turtle/include/linuxcan/virtualcan/: .kvvirtualcan.ko.cmd  .kvvirtualcan.mod.o.cmd  .kvvirtualcan.o.cmd  .virtualcan.o.cmd  kvvirtualcan.ko  kvvirtualcan.mod.c  modules.order
turtle/include/linuxcan/virtualcan/.tmp_versions/: kvvirtualcan.mod
turtle/include/xcommunication/: xcommunicationconfig.h
turtle/include/xsens/: xstypesconfig.h
turtle/launch/: calibrate.launch~  fake.launch  fake.launch~  laser.launch  laser.launch~  mikuSenor.launch~
turtle/msg/: Can_frame.msg  Sync_sensor.msg  Sync_sensor.msg~
turtle/src/motor_control_node/: MotorController.cpp  MotorController.h  motor_control_node.cpp
turtle/src/move/: move.cpp  move_test.cpp
visual_servo/: CMakeLists.txt~  extern_matrix.txt  package.xml~
(+126 files in other folders)
